完成了权限管理的角色管理界面,并添加了用户管理的修改角色功能

--- a/src/assets/css/globalCss.css
+++ b/src/assets/css/globalCss.css
@@ -4,6 +4,7 @@ html,
 body,
 #app {
     height: 100%;
+    min-width: 1366px;
 }
 
 * {
@@ -28,4 +29,17 @@ body,
 .el-breadcrumb {
     font-size: 18px !important;
     margin-bottom: 30px !important;
+}
+
+.listTable {
+    height: 100%;
+    margin-top: 30px;
+}
+
+.btnList {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
 }
